umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_chemdoodle_3d.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 68
bond_count: 73
sum_formula: C32H24Cl2N8O2
graph6: ~?@C?????G@?C?G????_O?A??A??C??C??A??A???O?@?O?A?_I?A?D?@?O?COA??a???GG???OO?O????G???????G????@??????C?????G?????_?????O?????@??????G??????_?????@??????@O??????g??A???????O??????@???????A????????A???????@????O???????A????????????G????????_???????@?????????_????????O????????C?????????O?????????_?????????_?????????O?????????C??????????_?????????A??????????C??????????C??????????A????
