umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_chemdoodle_allOrganicElementsPresent.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 69
bond_count: 72
sum_formula: C28H26BrCl2F2N2O6PS
graph6: ~?@D????OG??OA?C???????AB_???O??O??G??C_??o??D??G??CW??C??????G???G???@?@????@?????@?A?O????????G????@??????E?????IO???C?????@?@?????B????@??????A??_????????_??????O???????O??????@???????@????????C???????A????????_???????G????????_???????A????????A?????????_????????G????????@?????????C?????????C?????????A?????????A?????????@??????????G?????????@??????????C??????????C??????????C??????????A????
