umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_chemdoodle_dna.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 143
bond_count: 159
sum_formula: C68N25O43P7
graph6: ~?ANsCGGG@?OC_@?@??_?O?@??C??O??G?GG?_????G??@???C???@????_???G???A????C????O???@G????C????@?????G????@?????@?????@?????@?????GG????O???????C??????O??????_??????C??????@???????G??????@???????@???????A???????C_???????G???????@????????C????????G????????G????????C????????A?????????G?????????_????????A????????H@???????@????????????G?????????A??????????O??????????G??????????G??????????C??????????A???????????G??????????@???????????H???????????@????????????_???????????G???????????A????????????C????????????G????????????O???????????CC???????????O??????????????G????????????@?????????????C?????????????@??????????????_?????????????G?????????????A??????????????C??????????????O?????????????@G??????????????C??????????????@???????????????G???????????????_??????????????@???????????????@???????????????@????????????????G???????????????@????????????????G??????????????@GG?????????????????????????????????C????????????????A?????????????????_?????????????????_????????????????@?????????????????@?????????????????@??????????????????G?????????????????A??????????????????c??????????????????G??????????????????G??????????????????C??????????????????@???????????????????G???????????????????_??????????????????A???????????????????@????????????????????_??????????????????cG?????????????????@??????????????????????C????????????????????O????????????????????_????????????????????C????????????????????@?????????????????????G????????????????????@O????????????????????@?????????????????????A?????????????????????C_?????????????????????G?????????????????????@??????????????????????C??????????????????????O??????????????????????G??????????????????????C??????????????????????A???????????????????????G?????????????????????@@?
