umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_chemdoodle_morphine.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 21
bond_count: 25
sum_formula: C17NO3
graph6: T??GkOGA?CAC?EOO?_C?_??WO???C@??_??B
