umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_chemdoodle_planar1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 23
bond_count: 26
sum_formula: C20N2O
graph6: VGSoI?OA?COC?D?_?@?A??O??@??@G?@???O??A???@_
