umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_chemdoodle_planar2.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 26
bond_count: 30
sum_formula: C21N3OS
graph6: Y??_GHBG@??A?A?@g???@??G??O??O??KG?????KO?AO??CC??CC??@?
