umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_chemdoodle_planar3.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 25
bond_count: 26
sum_formula: C16FN3O3S2
graph6: XC_C????_?_AOA?A?OC??O?O?A???_A?_??G@??_A??_C?OH???
